# fastapi_homework

./: .gitignore  README.md  pyproject.toml
items_app/: __init__.py  alembic.ini  create_app.py  db.py  db_seed.py  items.db  lifespan.py  models.py  schemas.py
items_app/migrations/: env.py
items_app/migrations/versions/: 4791a2eabfd5_initial_migration.py
items_app/routers/: items.py
notifications_app/: create_app.py
notifications_app/routers/: email_notifications.py
